crates/tui/tests/snapshots/snapshots__sidebar_dense_agent_rows.snap
---
source: crates/tui/tests/snapshots.rs
expression: rendered
---
 LAZYBOX v0.1.9 (dev)                                                       2 items  7d
 f [filter]  o [split]  # [find]

 ──────────────────────────────────────────────────────────────────────────────────────

 ▾  owner/repo
  I Issues
 ▶○ 812 A   feat: queue + retry the sync worker           1 X gpt-5.6-s… ·xhi        5m
  ○ 813 A   fix: sidebar columns waste half the row       2 C Opus             ARM  20m
