crates/tui/tests/snapshots/snapshots__sidebar_empty.snap
---
source: crates/tui/tests/snapshots.rs
expression: rendered
---
 LAZYBOX v0.1.9 (dev)       0 items  7d
 f [filter]  o [split]  # [find]

 ──────────────────────────────────────
