crates/tui/tests/snapshots/snapshots__sidebar_empty_getting_started.snap
---
source: crates/tui/tests/snapshots.rs
expression: rendered
---
 LAZYBOX v0.1.5             0 items  7d
 f [all]  o [split]

 ──────────────────────────────────────


  No PRs or issues yet

  lazybox also manages your
  git worktrees — spin up an
  agent session per task:

   ⇧W   start agent
   n    new workspace
   ⇧N   pick a repo

  or open a tool yourself:
   c    claude
   s    shell
   e    editor

  new here?
   ?    help
   ⇧T   tour
   ⇧R   refresh inbox
