crates/tui/tests/snapshots/snapshots__sidebar_focused_3_sessions.snap
---
source: crates/tui/tests/snapshots.rs
expression: rendered
---
 PILOT  3  [7d]
 f [all]  o [split]

 ────────────────────────────────────

   ▾  owner/repo
     I Issues
   ▸ ○ 1 A   task: o/r#1          1mo
     ○ 2 A   task: o/r#2          1mo
     ○ 3 A   task: o/r#3          1mo
