crates/tui/tests/snapshots/snapshots__sidebar_mixed_github_linear_per_group_columns.snap
---
source: crates/tui/tests/snapshots.rs
expression: rendered
---
 LAZYBOX v0.1.9 (dev)       3 items  7d
 f [filter]  o [recent]  # [find]
 1 CI  1 review
 ──────────────────────────────────────

 ▾  linear
 ▾  linear/OBI
 ▶◆   A   linear OBI-2011           30m
  ◆   A   linear OBI-9               1h
 ▾  owner
 ▾  owner/repo  ● 1
  ⇄ 31000   fix parser REVIEW  CI FAIL
