crates/tui/tests/snapshots/snapshots__sidebar_mixed_number_widths.snap
---
source: crates/tui/tests/snapshots.rs
expression: rendered
---
 PILOT  3  [7d]
 f [all]  o [split]

 ────────────────────────────────────

   ▾  owner/repo
     I Issues
   ▸ ○ 7   A   task: o/r#7        10m
     ○ 42  A   task: o/r#42        1h
     ○ 312 A   task: o/r#312       2h
