crates/tui/tests/snapshots/snapshots__sidebar_multiple_agent_badges.snap
---
source: crates/tui/tests/snapshots.rs
expression: rendered
---
 LAZYBOX v0.1.9 (dev)        1 item  7d
 f [filter]  o [split]  # [find]

 ──────────────────────────────────────

 ▾  owner/repo
  I Issues
 ▶○ 621 A   Multi-agent workspace 1C×2X
