crates/tui/tests/snapshots/snapshots__sidebar_recent_pr_and_issue_mixed.snap
---
source: crates/tui/tests/snapshots.rs
expression: rendered
---
 PILOT  3  [7d]
 f [all]  o [recent]

 ────────────────────────────────────

   ▾  owner/repo
   ▸ [PR] #10 A   task: o/r#10    1mo
     [I]  #11 A   task: o/r#11    1mo
     [I]  #12 A   task: o/r#12    1mo
