crates/tui/tests/snapshots/snapshots__sidebar_split_pr_vs_issue.snap
---
source: crates/tui/tests/snapshots.rs
assertion_line: 164
expression: rendered
---
 LAZYBOX v0.1.4            3 items  7d
 f [all]  o [split]

 ─────────────────────────────────────

   ▾  owner/repo
   P PRs
 ▸ ⇄ 10 A   task: o/r#10            5m
   I Issues
   ○ 11 A   task: o/r#11           30m
   ○ 12 A   task: o/r#12            1h
