crates/tui/tests/snapshots/snapshots__sidebar_unfocused_1_session.snap
---
source: crates/tui/tests/snapshots.rs
expression: rendered
---
 LAZYBOX v0.1.7 (dev)        1 item  7d
 f [all]  o [split]

 ──────────────────────────────────────

 ▸○ 1 A   task: o/r#1               10m█
